src/test/resources/org/korren/test/jlox/samples/errors/top_level_super.lox
super.notEvenInAClass();  // Error: "[line 1] Error at 'super': Can't use 'super' outside of a class."
